--- a/Config/config.json
+++ b/Config/config.json
@@ -13,40 +13,41 @@
     "balance_engine_throughputs"  : false,
 
     "books" : [
-        "2moves_v1.epd",
-        "3moves_FRC.epd",
-        "4moves_noob.epd",
-        "8moves_v3.epd",
-        "DFRC.epd",
-        "Endgames.epd",
-        "Pohl.epd",
-        "Pohl.pgn",
-        "UHO_4060_v2.epd",
-        "UHO_4060_vB.epd",
-        "UHO_4060_vT.epd",
-        "UHO_Lichess_4852_v1.epd"
-    ],
+    "2moves_v1.epd",
+    "3moves_FRC.epd",
+    "4moves_noob.epd",
+    "8moves_v3.epd",
+    "DFRC.epd",
+    "Endgames.epd",
+    "Pohl.epd",
+    "Pohl.pgn",
+    "UHO_4060_v2.epd",
+    "UHO_4060_vB.epd",
+    "UHO_4060_vT.epd",
+    "UHO_Lichess_4852_v1.epd"
+  ],
 
     "engines" : [
-        "4ku",
-        "Berserk",
-        "Bit-Genie",
-        "BlackMarlin",
-        "Demolito",
-        "Drofa",
-        "Equisetum",
-        "Ethereal",
-        "FabChess",
-        "Halogen",
-        "Igel",
-        "Koivisto",
-        "Laser",
-        "RubiChess",
-        "Seer",
-        "Stash",
-        "Stockfish",
-        "Weiss",
-        "Winter",
-        "Zahak"
-    ]
+    "4ku",
+    "Berserk",
+    "Bit-Genie",
+    "BlackMarlin",
+    "Demolito",
+    "Drofa",
+    "Equisetum",
+    "Ethereal",
+    "FabChess",
+    "Halogen",
+    "Igel",
+    "Koivisto",
+    "Laser",
+    "RubiChess",
+    "Seer",
+    "Stash",
+    "Stockfish",
+    "Weiss",
+    "Winter",
+    "Zahak",
+    "Redtail"
+  ]
 }
