chore: install build deps in client container

--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -1,5 +1,10 @@
 FROM python:3.13-slim
 
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    git \
+    && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /client
 
 COPY Client/requirements.txt .
